Fixed alignment of items on AddNote page

--- a/src/addNote.css
+++ b/src/addNote.css
@@ -1,9 +1,14 @@
 .AddNote {
-    /*border: 1px solid black;*/
     margin: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.InputFields {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
 }
 
 .NameInput {
